tetrapak-publicweb/ui.dev/src/source/templates/components/tabslist/_tabsList.scss
.pw-tablist {
    &--display-row {
        > .row {
            flex-direction: row;
            margin-left: 0;
            margin-right: 0;
        }
    }

    &--display-row-reversed {
        > .row {
            flex-direction: row-reverse;
            margin-left: 0;
            margin-right: 0;
        }
    }
    // .leftPad {
    //     @media #{$desktop} {
    //         padding-left: 15px;
    //     }
    // }
    // .rightPad {
    //     @media #{$desktop} {
    //         padding-right: 15px;
    //     }
    // }

    // &__events {
    //     padding: 0;
    //     @media #{$desktop} {
    //         @include padding-right($padding-l);
    //         padding-left: 0;
    //     }
    // }

    &__events-icright {
        padding: 0;
        @media #{$desktop} {
            @include padding-right($padding-l);
            padding-left: 0;
        }

        div,
        a {
            @media #{$desktop} {
                @include margin-right(-$margin-l);
            }
        }

        // &__readmore {
        //     div,
        //     a {
        //         margin: 0;
        //         padding: $margin-l;
        //     }
        // }
    }

    &__events-icleft {
        padding: 0;
        @media #{$desktop} {
            @include padding-left($padding-l);
            padding-right: 0;
        }

        div {
            @media #{$desktop} {
                @include margin-left(-$margin-l);
            }
        }

        // &__readmore {
        //     border-bottom: 0;
        //     div,
        //     a {
        //         margin: 0;
        //         padding: $margin-l;
        //     }
        // }
    }

    &__events-sidesection {
        @include padding($padding-l);
        background: $color-wild-sand;
        min-height: 720px;

        @media #{$desktop} {
            border-radius: $border-radius;
        }
    }

    &__heading {
        @include font-size($font-l);
        @include line-height($padding-xl, $font-l);
        @include margin-bottom($margin-l);
        font-weight: 300;
        @media #{$desktop} {
            @include font-size($font-xl);
            @include line-height($padding-xxl, $font-xl);
            @include margin-bottom($margin-md);
        }
    }

    &__media-wrapper {
        @include margin-bottom($margin-l);
    }

    &__event {
        @include line-height($font-l, $font-baseline);
        display: block;
        color: $color-congress-blue;
        background-color: transparent;
        // border-top: 1px solid $color-mercury;
        border-bottom: 1px solid $color-mercury;
        margin-top: -1px;
        position: relative;
        width: 100%;
        text-align: left;
        font-weight: 500;
        &:last-child {
            border-bottom: 0;
        }
        &:first-child {
            border-top: 1px solid $color-mercury;
        }
        div,
        a {
            @include padding($padding-md $margin-l $padding-md $padding-md);
            @include padding-right($padding-xl);

            @media #{$desktop} {
                @include padding($padding-md $margin-l $padding-md $padding-md);
                // @include margin-right(-$margin-l);
            }
        }

        &:first-of-type {
            @include margin-top(0);
        }

        &:last-of-type.collapsed {
            @media #{$mobile} {
                border-bottom: 1px solid $color-mercury;
            }
        }

        .icon-left {
            @include right($margin-md);
            @include width($spacing-big-half);
            @include height($spacing-big-half);
            @include font-size($font-sm);
            color: $color-congress-blue;
            position: absolute;
            top: 0;
            bottom: 0;
            margin: auto;
            transition: transform $anim-speed-quick $anim-ease;

            &::before {
                vertical-align: top;

                @media #{$desktop} {
                    transform: rotate(-180deg);
                }
            }
            @media #{$desktop} {
                // @include left(-$margin-md);
                right: auto;
            }
        }

        .icon-right {
            @include right($margin-md);
            @include width($spacing-big-half);
            @include height($spacing-big-half);
            @include font-size($font-sm);
            color: $color-congress-blue;
            position: absolute;
            top: 0;
            bottom: 0;
            margin: auto;
            transition: transform $anim-speed-quick $anim-ease;

            @media #{$desktop} {
                right: 0;
            }

            &::before {
                vertical-align: top;

                @media #{$desktop} {
                    transform: rotate(-360deg);
                }
            }
        }

        &.active {
            z-index: $zindex-p;

            @media #{$desktop} {
                border-color: $color-white;
            }
            div {
                @media #{$desktop} {
                    color: $color-tundora;
                    background: $color-wild-sand;
                }
            }
        }

        &.active--grayscale-white {
            z-index: $zindex-p;

            @media #{$desktop} {
                border-color: $color-white;
            }

            div {
                background: $color-wild-sand;
                @media #{$desktop} {
                    color: $color-tundora;
                }
            }
        }

        &.active--grayscale-lighter {
            z-index: $zindex-p;

            @media #{$desktop} {
                border-color: $color-white;
            }

            div {
                background: $color-white;
                @media #{$desktop} {
                    color: $color-tundora;
                }
            }
        }

        &.m-active {
            @media #{$mobile} {
                z-index: $zindex-p;
                border-color: $color-wild-sand;
            }
        }

        &.collapsed {
            @media #{$mobile} {
                border-color: $color-mercury;
            }
        }

        &:not(.collapsed) {
            @media #{$mobile} {
                color: $color-tundora;
            }

            .icon-Arrow_Right_pw {
                color: $color-tundora;

                @media #{$mobile} {
                    transform: rotate(-180deg);
                }
            }
        }
    }

    &__event-readmore-icleft {
        a {
            @include padding($padding-l $padding-md);
            margin: 0;
            @media #{$desktop} {
                @include padding($padding-l $padding-xxxl);
            }
        }
    }

    &__event-readmore-icright {
        a {
            @include padding($padding-l $padding-md);
            margin: 0;
            @media #{$desktop} {
                @include padding($padding-l $margin-md);
            }
        }
    }

    &__event-title-icleft {
        @include margin-left(0);
        @media #{$desktop} {
            @include margin-left($margin-xl);
        }
    }

    &__event-title-icright {
        @include margin-right(0);
        @media #{$desktop} {
            @include margin-right($margin-l);
        }
    }

    &__event-detail-wrapper {
        // @include padding($padding-md);
        @include padding(0 $padding-md $padding-md $padding-md);
        background-color: $color-wild-sand;
    }

    &__event-detail-title {
        @include font-size($font-l);
        @include line-height($font-xl, $font-l);
        @include margin-bottom($margin-l);
        font-weight: 300;

        @media #{$desktop} {
            @include margin-bottom($margin-md);
        }
    }

    &__event-detail-subtitle {
        @include font-size($font-sm);
        @include line-height($font-m-md, $font-sm);
        @include margin-bottom($margin-md);
        color: $color-boulder;
        text-transform: uppercase;

        @media #{$desktop} {
            @include margin-bottom($margin-md);
        }
    }

    &__event-detail-description {
        @include font-size($font-baseline);
        @include line-height($font-l, $font-baseline);
        @include margin-bottom($margin-l);
        font-weight: 500;
        @media #{$desktop} {
            @include margin-bottom($margin-l);
        }
    }

    // &__event-detail-description-link {
    //     @include margin-bottom($margin-l);

    //     @media #{$desktop} {
    //         @include margin-bottom($margin-l);
    //     }
    // }

    video {
        width: 100%;
    }
}

.tpatom-youtube {
    @include margin-bottom($margin-md);
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;

    // @media #{$desktop} {
    //     margin-bottom: 0;
    // }

    iframe {
        @include border-radius($border-radius);
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }
}

// .read-more {
//     margin: 0;
//     padding: $padding-l $padding-l 0 $padding-l;
// }
// .tp-container-regular {
//     max-width: 100%;
//     margin: $margin-md;
//     @media #{$desktop} {
//         @include max-width($body-max-width);
//         margin: $margin-xxxl;
//     }
// }

